--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,16 +3,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="{{ site.description }}">
 <meta name="author" content="{{ site.author }}">
-<meta name="generator" content="Jekyll v3.8.6">
 
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Mansalva&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{{ "/assets/index.css" | relative_url }}">
+<link href="https://fonts.googleapis.com/css2?family=David+Libre:wght@400;500;700&family=Secular+One&display=swap" rel="stylesheet">
+
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
 {% if page.title %}
 	<title>{{ page.title }} · {{ site.title }}</title>
@@ -21,7 +21,6 @@
 {% endif %}
 
 {% if jekyll.environment == 'production' %}
-	<!-- change your GA id in _config.yml -->
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
