--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,62 @@
 ---
 layout: default
 ---
+<header class="container">
+  <div class="row">
+    <div class="article col-lg-9 col-md-9">
+      <div class="row">
+        <div class="offset-lg-2 col-lg-9">
+          <h1>{{ page.title }}</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col"></div>
+  </div>
+</header>
+
 <div class="jumbotron" style="background-image: url({{ page.image }}); background-size: cover;">
-  <h1 class="col-md-5 mx-auto mb-5 d-flex justify-content-center text-light">{{ page.title }}</h1>
-  <p class="lead text-light">{{ page.description }}</p>
 </div>
+
 <article class="container">
-  {{ content }}
+  <div class="row">
+    <div class="egoic-icon col-lg-9 col-md-9">
+      <div class="row">
+        <img id="egoic-icon" src="/assets/images/logo.png" alt="egoic" />
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="article col-lg-9 col-md-9">
+      <div class="row">
+        <div class="offset-lg-2 col-lg-9">
+          {{ content }}
+
+          <p>{{ page.author }}</p>
+
+          {% if page.comments %}
+          <div id="disqus_thread"></div>
+          <script>
+            /**
+             *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+             *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+            (function() { // DON'T EDIT BELOW THIS LINE
+              var d = document, s = d.createElement('script');
+              s.src = 'https://egoic.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+            })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    <div class="col"></div>
+  </div>
 </article>
