--- a/_layouts/section.html
+++ b/_layouts/section.html
@@ -2,9 +2,10 @@
 layout: default
 ---
 <section class="row m-2">
-  <div class=" container-fluid">
-    <div class="col-md-5 mx-auto mb-5">
-      <h1 class="d-flex justify-content-center">{{ page.title | capitalize}}</h1>
+  <div class="container">
+    <div class="col-md-12 mb-12">
+      <h1 class="d-flex">{{ page.title | capitalize}}</h1>
+      <img id="egoic-icon-overview" src="/assets/images/logo.png" alt="egoic" />
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
