--- a/assets/index.css
+++ b/assets/index.css
@@ -1,12 +1,34 @@
 /* stylelint-disable selector-list-comma-newline-after */
 
+html, body {
+  font-family: 'David Libre', serif;
+  font-size: 1.1rem;
+  line-height: 1.4rem;
+  color: #511D44;
+}
+
+.start {
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+  margin-bottom: 1rem;
+}
+
+.start p:first-child:first-letter {
+  font-size: 300%;
+  display: block;
+  font-weight: bold;
+  padding-top: 6px;
+  padding-right: 10px;
+  float: left;
+}
+
 .blog-header {
   line-height: 1;
   border-bottom: 1px solid #e5e5e5;
 }
 
 .blog-header-logo {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 2.25rem;
 }
 
@@ -15,9 +37,22 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
+  font-family: 'Secular One', sans-serif;
+  color: #511D44;
 }
 
+h2, h3, h4, h5, h6 {
+  margin-top: 2rem;
+}
+
+h5 {
+  margin-top: 1rem;
+}
+
+a {
+  font-weight: bold;
+  color: #511D44;
+}
 .zoom {
    transition: all 0.25s ease;
 }
@@ -38,8 +73,21 @@ h1, h2, h3, h4, h5, h6 {
 .nav-scroller {
   position: relative;
   z-index: 2;
-  height: 2.75rem;
+  height: 3rem;
   overflow-y: hidden;
+}
+
+.nav-scroller a {
+  display: block;
+  float: left;
+  margin-left: 30px;
+  margin-top: 10px;
+  font-family: 'Secular One', sans-serif;
+  font-size: 2rem;
+}
+
+.nav-scroller a img {
+  max-height: 2.7rem;
 }
 
 .nav-scroller .nav {
@@ -55,6 +103,10 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-overflow-scrolling: touch;
 }
 
+.nav-scroller .nav a {
+  color: #511D44;
+}
+
 .nav-scroller .nav-link {
   padding-top: .75rem;
   padding-bottom: .75rem;
@@ -63,7 +115,11 @@ h1, h2, h3, h4, h5, h6 {
 
 .card-img-right {
   height: 100%;
-  border-radius: 0 3px 3px 0;
+  border-radius: 0;
+}
+
+.card-img-top {
+  border-radius: 0;
 }
 
 .flex-auto {
@@ -118,6 +174,18 @@ h1, h2, h3, h4, h5, h6 {
   color: #999;
 }
 
+article.container img {
+  max-width: 50%;
+  float: right;
+  margin: 5px 0 10px 10px;
+}
+
+article.container img.wide {
+  max-width: 100%;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
 /*
  * Footer
  */
@@ -125,8 +193,8 @@ h1, h2, h3, h4, h5, h6 {
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
-  background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
+  background-color: black;
+  margin: 0 !important;
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
@@ -139,5 +207,108 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 12px;
 	padding: 1em;
   text-align: center;
-  font-family: Mansalva;
+  font-family: 'Rubik', sans-serif;
+}
+
+article.container .article {
+  background: white;
+  padding: 150px 20px 100px 20px;
+}
+
+.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.no-gutters > .col,
+.no-gutters > [class*="col-"] {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.jumbotron {
+  min-height: 500px;
+  max-height: 600px;
+  border-radius: 0;
+  margin-bottom: -350px;
+}
+
+.container-fluid.main {
+  background: #EBE7E1;
+  background-image: url('/assets/images/lines-top.png');
+  background-repeat: no-repeat;
+  padding-bottom: 100px;
+}
+
+.nav-scroller {
+  background: white;
+}
+
+header.container h1 {
+  margin: 150px 0 40px 0;
+}
+#egoic-icon {
+  display: block;
+  user-select: none;
+  margin: 0 auto -100px auto;
+  width: 140px;
+  z-index: 200;
+}
+
+#egoic-icon-overview {
+  display: block;
+  user-select: none;
+  margin: 0 auto 5px auto;
+  width: 140px;
+  z-index: 200;
+}
+
+.container.list-post {
+  background: white;
+  margin-bottom: 20px;
+}
+
+.container.list-post h3,
+.container.list-post h5 {
+  margin-top: 10px;
+}
+
+.container.list-post .col-md-4 img {
+  margin-top: 30px;
+}
+
+.card {
+  border-radius: 0;
+}
+
+p {
+  clear: both;
+}
+
+blockquote {
+  display: block;
+  float: left;
+  padding-top: 15px;
+  padding-bottom: 5px;
+  font-family: 'Secular One', sans-serif;
+  font-size: .9em;
+  line-height: 1.5em;
+  width: 250px;
+  border-top: 5px solid #e5e5e5;
+  border-bottom: 5px solid #e5e5e5;
+  margin-top: 10px;
+  margin-left: -30px;
+  margin-right: 20px;
+}
+
+@media (max-width: 768px) {
+  blockquote {
+    margin-left: 0;
+  }
+}
+
+#disqus_thread {
+  margin-top: 100px;
 }
