--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,11 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% if page.description %}
+<meta name="description" content="{{ page.description }}">
+{% else %}
 <meta name="description" content="{{ site.description }}">
+{% endif %}
 <meta name="author" content="{{ site.author }}">
 
 <!-- Bootstrap CSS -->
