--- a/_includes/sections/last_post.html
+++ b/_includes/sections/last_post.html
@@ -7,7 +7,7 @@
         </a>
         <p class="card-text">{{ include.last_post.excerpt }}</p>
         <p class="card-text"><small class="text-muted">{{ include.last_post.date | date_to_long_string }}</small></p>
-        <a href="">Lees verder</a>
+        <a href="{{ include.last_post.url | prepend: site.baseurl }}">Lees verder</a>
       </div>
     </div>
     <div class="col-md-4">
