--- a/_includes/sections/items_except_last.html
+++ b/_includes/sections/items_except_last.html
@@ -2,20 +2,27 @@
 {% for item in posts %}
 {% if forloop.index != 1 %}
 <div class="container list-post">
-    <div class="row">
-      <div class="col-md-8">
-        <div class="card-body">
-          <a class="text-reset" href="{{ item.url | prepend: site.baseurl}}">
-            <h5 class="card-title">{{ item.title }}</h5>
-          </a>
-          <p class="card-text">{{ item.description }}</p>
-          <p class="card-text"><small class="text-muted">{{ item.date | date_to_long_string }}</small></p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <img src="{{item.image}}" class="w-100" alt="...">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card-body top">
+        <a class="text-reset" href="{{ item.url | prepend: site.baseurl}}">
+          <h5 class="card-title">{{ item.title }}</h5>
+        </a>
       </div>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="card-body bottom">
+        <p class="card-text">{{ item.excerpt }}</p>
+        <a href="{{ include.last_post.url | prepend: site.baseurl }}">Lees verder</a>
+        <p class="card-text"><small class="text-muted">{{ item.date | date_to_long_string }}</small></p>
+      </div>
+    </div>
+    <div class="col-md-4 image-container">
+      <img src="{{item.thumbnail}}" class="w-100" alt="{{ item.title }}">
+    </div>
+  </div>
 </div>
 {% endif %}
 {% endfor %}
