--- a/_includes/sections/items_except_last.html
+++ b/_includes/sections/items_except_last.html
@@ -15,7 +15,7 @@
     <div class="col-md-8">
       <div class="card-body bottom">
         <p class="card-text">{{ item.excerpt }}</p>
-        <a href="{{ include.last_post.url | prepend: site.baseurl }}">Lees verder</a>
+        <a href="{{ item.url | prepend: site.baseurl}}">Lees verder</a>
         <p class="card-text"><small class="text-muted">{{ item.date | date_to_long_string }}</small></p>
       </div>
     </div>
