--- a/assets/index.css
+++ b/assets/index.css
@@ -186,6 +186,13 @@ article.container img.wide {
   margin-bottom: 20px;
 }
 
+article.container img.small {
+  max-width: 50%;
+  width: 50%;
+  margin: 0 auto 20px auto;
+  float: none;
+}
+
 /*
  * Footer
  */
